<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tech.sbdevelopment</groupId>
    <artifactId>ShowControl</artifactId>
    <version>1.4.1</version>
    <packaging>jar</packaging>
    <name>ShowControl</name>
    <url>https://sbdevelopment.tech</url>

    <description>Create shows easily using this plugin!</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>${project.name} v${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>11</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.28</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <relocations>
                                <relocation>
                                    <pattern>fr.minuskube.inv</pattern>
                                    <shadedPattern>tech.sbdevelopment.showcontrol.libs.inv</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>fr.skytasul.guardianbeam</pattern>
                                    <shadedPattern>tech.sbdevelopment.showcontrol.libs.guardianbeam</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.commands</pattern>
                                    <shadedPattern>tech.sbdevelopment.showcontrol.libs.commands</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.locales</pattern>
                                    <shadedPattern>tech.sbdevelopment.showcontrol.libs.locales</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.reflections</pattern>
                                    <shadedPattern>tech.sbdevelopment.showcontrol.libs.reflections</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>inventive-repo</id>
            <url>https://repo.inventivetalent.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MinusKube</groupId>
            <artifactId>SmartInvs</artifactId>
            <version>9c9dbbee16</version>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>9.5.0</version>
        </dependency>
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-paper</artifactId>
            <version>0.5.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.skytasul</groupId>
            <artifactId>guardianbeam</artifactId>
            <version>2.3.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.28</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
